# intersecting-lines

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxconfig
DOCS/HTML_DOCS/: EventQueue_8h_source.html  LSIGraphix_8h_source.html  LineSegmentIntersector_8h_source.html  Point-example.html  Status_8h_source.html  annotated.html  classEventQueue-members.html  classEventQueue.html  classGraphix-members.html  classGraphix.html  classGraphix__inherit__graph.dot  classGraphix__inherit__graph.map  classGraphix__inherit__graph.md5  classLSIGraphix-members.html  classLSIGraphix.html  classLSIGraphix__coll__graph.dot  classLSIGraphix__coll__graph.map  classLSIGraphix__coll__graph.md5  classLSIGraphix__inherit__graph.dot  classLSIGraphix__inherit__graph.md5  classLineSegment-members.html  classLineSegment.html  classLineSegmentIntersector-members.html  classLineSegmentIntersector.html  classLineSegmentIntersector_1_1LSIPoint-members.html  classLineSegmentIntersector_1_1LSIPoint.html  classLineSegmentIntersector_1_1LSIPoint__coll__graph.dot  classLineSegmentIntersector_1_1LSIPoint__coll__graph.map  classLineSegmentIntersector_1_1LSIPoint__coll__graph.md5  classLineSegmentIntersector_1_1LSIPoint__inherit__graph.dot  classLineSegmentIntersector_1_1LSIPoint__inherit__graph.map  classLineSegmentIntersector_1_1LSIPoint__inherit__graph.md5  classLineSegmentIntersector_1_1LSISegment-members.html  classLineSegmentIntersector_1_1LSISegment.html  classLineSegmentIntersector_1_1LSISegment__coll__graph.dot  classLineSegmentIntersector_1_1LSISegment__coll__graph.map  classLineSegmentIntersector_1_1LSISegment__coll__graph.md5  classLineSegmentIntersector_1_1LSISegment__inherit__graph.dot  classLineSegmentIntersector_1_1LSISegment__inherit__graph.map  classLineSegmentIntersector_1_1LSISegment__inherit__graph.md5  (+52 more)
DOCS/latex/: annotated.tex  classEventQueue.tex  classGraphix.tex  classGraphix.tex.tmp  classGraphix__inherit__graph.dot  (+28 more)
src/: DummyStatus(Waste).cpp  EventQueue.cpp  EventQueue.h  LSIGraphix.cpp  LSIGraphix.h  LineSegmentIntersector.cpp  LineSegmentIntersector.h  Status.cpp  Status.h  components.cpp  containers.cpp  containers.h  graphix.cpp  graphix.h  main.cpp  primitives.cpp  primitives.h  test.txt
test/: case1.txt  case2.txt  case3.txt  case4.txt  case5.txt  create_testcases.py  special.txt
(+25 files in other folders)
